Stable version before UI improvements

--- a/frontend/env.example
+++ b/frontend/env.example
@@ -12,3 +12,7 @@ NEXT_PUBLIC_WIDGET_URL=http://localhost:3002
 NEXT_PUBLIC_APP_NAME=AgentDesk
 NEXT_PUBLIC_APP_URL=http://localhost:3000
 
+# PayPal Configuration (Sandbox)
+NEXT_PUBLIC_PAYPAL_CLIENT_ID=your_sandbox_client_id_here
+PAYPAL_SECRET=your_sandbox_secret_here
+
