--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,14 +10,17 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "^14.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "@paypal/react-paypal-js": "^8.1.3",
     "@supabase/ssr": "^0.0.10",
     "@supabase/supabase-js": "^2.39.0",
     "axios": "^1.6.5",
     "clsx": "^2.1.0",
     "lucide-react": "^0.312.0",
+    "next": "^14.1.0",
+    "openai": "^6.3.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "tailwind-merge": "^2.2.0"
   },
   "devDependencies": {
@@ -32,4 +35,3 @@
     "typescript": "^5.3.3"
   }
 }
-
