--- a/backend/package.json
+++ b/backend/package.json
@@ -34,7 +34,8 @@
     "class-transformer": "^0.5.1",
     "reflect-metadata": "^0.2.1",
     "rxjs": "^7.8.1",
-    "axios": "^1.6.5"
+    "axios": "^1.6.5",
+    "twilio": "^5.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.3.0",
