Enabled RAG knowledge retrieval for bot + fixed document ingestion

--- a/backend/env.example
+++ b/backend/env.example
@@ -7,6 +7,11 @@ SUPABASE_URL=https://your-project.supabase.co
 SUPABASE_ANON_KEY=your-anon-key-here
 SUPABASE_SERVICE_ROLE_KEY=your-service-role-key-here
 
+# Supabase Storage Configuration
+# Maximum file size for document uploads in bytes
+# Free tier: 52428800 (50MB) | Pro tier: 104857600 (100MB) | Team/Enterprise: higher
+SUPABASE_MAX_FILE_SIZE=52428800
+
 # OpenAI Configuration
 OPENAI_API_KEY=sk-your-openai-api-key-here
 OPENAI_MODEL=gpt-4o-mini
