--- a/backend/package.json
+++ b/backend/package.json
@@ -35,13 +35,17 @@
     "reflect-metadata": "^0.2.1",
     "rxjs": "^7.8.1",
     "axios": "^1.6.5",
-    "twilio": "^5.0.0"
+    "twilio": "^5.0.0",
+    "pdf-parse": "^1.1.1",
+    "mammoth": "^1.6.0",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.3.0",
     "@nestjs/schematics": "^10.1.0",
     "@nestjs/testing": "^10.3.0",
     "@types/express": "^4.17.21",
+    "@types/multer": "^1.4.11",
     "@types/jest": "^29.5.11",
     "@types/node": "^20.11.5",
     "@types/supertest": "^6.0.2",
