--- a/frontend/.dockerignore
+++ b/frontend/.dockerignore
@@ -5,6 +5,7 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 .pnpm-debug.log*
+# Note: package-lock.json is needed for npm ci
 
 # Build outputs
 .next
