--- a/widget/Dockerfile
+++ b/widget/Dockerfile
@@ -8,7 +8,7 @@ WORKDIR /app
 
 # Install dependencies
 COPY package*.json ./
-RUN npm ci
+RUN npm install
 
 # Stage 2: Build
 FROM node:18-alpine AS builder
