--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,55 +1,43 @@
 # ============================
-# AgentDesk Backend - Production Build
-# Optimized for Railway - No Chromium
+# AgentDesk Backend - Railway Optimized
+# Fast build without Chromium/Puppeteer
 # ============================
 
-# Stage 1: Builder
-FROM node:18-alpine AS builder
+FROM node:18-alpine
 
 WORKDIR /app
 
-# Install base dependencies only (no chromium)
-RUN apk add --no-cache \
-  python3 \
-  make \
-  g++
+# Install minimal dependencies
+RUN apk add --no-cache python3 make g++
 
-# Copy only package files for better caching
-COPY package*.json ./
-
-# Install ALL dependencies (needed for build)
-RUN npm install && npm cache clean --force
-
-# Copy source files needed for build
-COPY tsconfig*.json nest-cli.json ./
-COPY src ./src
-
-# Build the TypeScript code
-RUN npm run build
-
-# ============================
-# Stage 2: Production Image
-# ============================
-FROM node:18-alpine AS production
-
-WORKDIR /app
-
-# Install only minimal dependencies
-RUN apk add --no-cache \
-  python3
+# Set environment to skip Chromium download
+ENV PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true
+ENV PUPPETEER_EXECUTABLE_PATH=/usr/bin/chromium-browser
 
 # Copy package files
 COPY package*.json ./
 
-# Install ONLY production dependencies
-RUN npm install --production && npm cache clean --force
+# Install all dependencies (needed for build)
+RUN npm install --omit=optional && npm cache clean --force
 
-# Copy built files from builder
-COPY --from=builder /app/dist ./dist
+# Copy source code
+COPY tsconfig*.json nest-cli.json ./
+COPY src ./src
+COPY public ./public
 
-# Expose default port used by Railway
+# Build TypeScript
+RUN npm run build
+
+# Remove dev dependencies after build
+RUN npm prune --production
+
+# Expose port
 ENV PORT=8080
 EXPOSE 8080
 
-# Start the production server
+# Health check
+HEALTHCHECK --interval=30s --timeout=3s --start-period=40s \
+  CMD node -e "require('http').get('http://localhost:8080/api', (r) => {process.exit(r.statusCode === 200 ? 0 : 1)}).on('error', () => process.exit(1))"
+
+# Start server
 CMD ["node", "dist/main.js"]
