✅ הוספת תמיכה ב-REDIS_URL ל-Railway

--- a/backend/env.example
+++ b/backend/env.example
@@ -34,6 +34,9 @@ CHUNK_SIZE=500
 CHUNK_OVERLAP=50
 
 # Redis Configuration (for BullMQ job queue)
+# Option 1: Use REDIS_URL (Railway/Cloud providers)
+REDIS_URL=redis://:password@host:port
+# Option 2: Use individual variables (Local development)
 REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_PASSWORD=
