--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -31,13 +31,13 @@ RUN npm run build
 # Remove dev dependencies after build
 RUN npm prune --production
 
-# Expose port
-ENV PORT=8080
-EXPOSE 8080
+# Expose port (Railway will override with PORT variable)
+ENV PORT=3081
+EXPOSE 3081
 
 # Health check
 HEALTHCHECK --interval=30s --timeout=3s --start-period=40s \
-  CMD node -e "require('http').get('http://localhost:8080/api/health', (r) => {process.exit(r.statusCode === 200 ? 0 : 1)}).on('error', () => process.exit(1))"
+  CMD node -e "require('http').get('http://localhost:3081/api/health', (r) => {process.exit(r.statusCode === 200 ? 0 : 1)}).on('error', () => process.exit(1))"
 
 # Start server
 CMD ["node", "dist/main.js"]
