--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@paypal/react-paypal-js": "^8.1.3",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@supabase/ssr": "^0.0.10",
     "@supabase/supabase-js": "^2.39.0",
     "axios": "^1.6.5",
@@ -21,6 +22,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "recharts": "^3.3.0",
     "tailwind-merge": "^2.2.0"
   },
   "devDependencies": {
