--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@supabase/supabase-js": "^2.39.0",
     "axios": "^1.6.5",
     "clsx": "^2.1.0",
+    "date-fns": "^3.0.0",
     "lucide-react": "^0.312.0",
     "next": "^14.1.0",
     "openai": "^6.3.0",
