--- a/backend/package.json
+++ b/backend/package.json
@@ -22,33 +22,37 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.3.0",
-    "@nestjs/core": "^10.3.0",
     "@nestjs/config": "^3.1.1",
+    "@nestjs/core": "^10.3.0",
+    "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^10.3.0",
     "@nestjs/throttler": "^5.1.1",
     "@supabase/supabase-js": "^2.39.0",
-    "openai": "^4.24.1",
-    "cheerio": "^1.0.0-rc.12",
-    "puppeteer": "^21.7.0",
-    "class-validator": "^0.14.1",
-    "class-transformer": "^0.5.1",
-    "reflect-metadata": "^0.2.1",
-    "rxjs": "^7.8.1",
     "axios": "^1.6.5",
-    "twilio": "^5.0.0",
-    "pdf-parse": "^1.1.1",
+    "bullmq": "^5.1.0",
+    "cheerio": "^1.0.0-rc.12",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
+    "googleapis": "^164.1.0",
+    "ioredis": "^5.3.2",
     "mammoth": "^1.6.0",
     "multer": "^1.4.5-lts.1",
-    "bullmq": "^5.1.0",
-    "ioredis": "^5.3.2"
+    "openai": "^4.24.1",
+    "passport": "^0.7.0",
+    "pdf-parse": "^1.1.1",
+    "puppeteer": "^21.11.0",
+    "reflect-metadata": "^0.2.1",
+    "resend": "^6.4.0",
+    "rxjs": "^7.8.1",
+    "twilio": "^5.10.4"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.3.0",
     "@nestjs/schematics": "^10.1.0",
     "@nestjs/testing": "^10.3.0",
     "@types/express": "^4.17.21",
-    "@types/multer": "^1.4.11",
     "@types/jest": "^29.5.11",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.11.5",
     "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^6.19.0",
@@ -84,4 +88,3 @@
     "testEnvironment": "node"
   }
 }
-
