--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,15 @@
   },
   "dependencies": {
     "@paypal/react-paypal-js": "^8.1.3",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@supabase/ssr": "^0.0.10",
     "@supabase/supabase-js": "^2.39.0",
     "axios": "^1.6.5",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.0",
     "date-fns": "^3.0.0",
     "lucide-react": "^0.312.0",
