--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "@nestjs/core": "^10.3.0",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^10.3.0",
+    "@nestjs/schedule": "^6.0.1",
     "@nestjs/throttler": "^5.1.1",
     "@supabase/supabase-js": "^2.39.0",
     "axios": "^1.6.5",
