--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,16 +1,25 @@
 # ============================
 # AgentDesk Backend - Railway Optimized
-# Fast build without Chromium/Puppeteer
+# With Chromium for web scraping
 # ============================
 
 FROM node:20-alpine
 
 WORKDIR /app
 
-# Install minimal dependencies
-RUN apk add --no-cache python3 make g++
+# Install dependencies including Chromium for Puppeteer
+RUN apk add --no-cache \
+    python3 \
+    make \
+    g++ \
+    chromium \
+    nss \
+    freetype \
+    harfbuzz \
+    ca-certificates \
+    ttf-freefont
 
-# Set environment to skip Chromium download
+# Set environment to skip Chromium download (use system Chromium)
 ENV PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true
 ENV PUPPETEER_EXECUTABLE_PATH=/usr/bin/chromium-browser
 
