--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "recharts": "^3.3.0",
+    "resend": "^6.4.2",
     "tailwind-merge": "^2.2.0"
   },
   "devDependencies": {
